Versão_mais_recente_da_IA
IA + Página de desenvolvedores

--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,12 @@
 {
   "development": {
     "username": "postgres",
-    "password": "residentevil6",
+    "password": "852002",
     "database": "ifvest",
     "host": "localhost",  
     "dialect": "postgres",
     "port": "5432"
+
   },
   "test": {
     "username": "ruan177",
@@ -36,3 +37,4 @@
     }
   }
 }
+
