--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "jest": "^29.7.0",
     "method-override": "^3.0.0",
     "modules": "^0.4.0",
+    "modulos": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
-    "node": "^22.5.0",
+    "node": "^22.6.0",
     "pg": "^8.11.3",
     "sequelize": "^6.37.3",
     "supertest": "^7.0.0"
