--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.20.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -24,6 +26,8 @@
     "mysql2": "^3.2.0",
     "node": "^22.5.0",
     "pg": "^8.11.3",
+    "quill-delta-to-html": "^0.12.1",
+    "quill-resize-image": "^1.0.5",
     "sequelize": "^6.37.3",
     "supertest": "^7.0.0"
   },
