--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "supertest": "^7.0.0"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.12",
     "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard-scss": "^13.1.0"
   }
 }
