--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node": "^22.5.0",
     "pdfkit": "^0.15.0",
     "pg": "^8.11.3",
+    "quill": "^1.3.6",
     "quill-delta-to-html": "^0.12.1",
     "quill-resize-image": "^1.0.5",
     "sequelize": "^6.37.3",
