--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.20.0",
     "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.1",
     "html2pdf": "^0.0.11",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "modules": "^0.4.0",
     "multer": "^1.4.5-lts.1",
@@ -31,6 +33,7 @@
     "quill": "^1.3.6",
     "quill-delta-to-html": "^0.12.1",
     "quill-resize-image": "^1.0.5",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.3",
     "supertest": "^7.0.0"
   },
